
* protocolData replacement method for CrlmmSetList objects

* added .man page for .computeCopynumber 

* Suggests VanillaICE (>= 1.7.8)  -- needed to run the copynumber.Rnw
  vignette

2009-07-16 R Scharpf - committed version 1.3.13

* fixed bug 'DF.PRIOR not found'

2009-07-16 R Scharpf - committed version 1.3.14

* fixed malformed DESCRIPTION file

2009-07-31 B Carvalho - committed version 1.3.16

* Removed several warnings at the C-level

* Fixed several incorrect links in the documentation

* Removed multiple notes "no visible binding for global variable"
  by replacing, in crlmmIlluminaWrapper and crlmmWrapper,
  a) samplesheet5 by get("samplesheet5")
  b) path by get("path")
  c) res by get("res")

2009-08-04 R. Scharpf - committed version 1.3.17

* changed readIdatFiles function to check whether arrayNames is NULL

2009-08-13 R. Scharpf - committed version 1.3.18

* move Biobase to Depends
* removed GGdata from suggests (problem with loading illuminaHumanv1.db)
* overhaul of vignette
* added update() method for copy number
* added documentation and error checks for crlmmWrapper

2009-08-14 R. Scharpf - committed version 1.3.19

* changes to crlmmWrapper (trying to make this handle the illumina platform as well...still needs testing)
  - removed crlmmIlluminaWrapper.Rd, and commented crlmmIlluminaWrapper function
* labeled figures / displayed output of code chunks in the copy number vignette
* added bibliography for copy number vignette.  Added file inst/doc/refs.bib
* added boxplot method 

2009-10-03 R. Scharpf - committed version 1.3.21

* modified crlmmWrapper function
* modified illumina copy number vignette (still needs debugging)
* changed title of copy number vignette
* added reference to the crlmm paper
* changed copyNumber() method so that CA + NA = NA, CB + NA = NA (previously had CA+NA=CA, but this can result in a lot of zeros, depending on the genotype)
* new method: addFeatureAnnotation
* support for snp5.0