@@ -31,6 +31,7 @@ importFrom(graphics, abline, axis, layout, legend, mtext, par, plot,
            polygon, rect, segments, text, points, boxplot)
 
 importFrom(stats, update)
+importFrom(SNPchip, chromosome2integer)
 
 importFrom(grDevices, grey)
 
