@@ -282,3 +282,11 @@ is decoded and scanned
 * changed copyNumber() method so that CA + NA = NA, CB + NA = NA (previously had CA+NA=CA, but this can result in a lot of zeros, depending on the genotype)
 * new method: addFeatureAnnotation
 * support for snp5.0
+
+2009-10-04 R. Scharpf - committed version 1.3.22
+
+* changed default path argument for readIdatFiles to empty quotes
+* fixed bug in update method for character strings
+* updated addFeatureAnnotation so that CHR arg not required
+* fixed bug in nonpolymorphic function -- function checks whether any regions are pseudoautosomal 
+* fixed bug in list2locusset function (no longer assigns genomewidesnp6 as the default annotation)
